Fix z-index of components. #212

--- a/app/components/Navigation/Sidenav/sidenav.scss
+++ b/app/components/Navigation/Sidenav/sidenav.scss
@@ -9,7 +9,7 @@
   left: 0;
   top: 0;
   height: 100%;
-  z-index: 3;
+  z-index: 5;
   overflow: hidden;
   transition: width .3s ease;
 
