--- a/app/scripts/RebooEditor/Toolbar/styles.scss
+++ b/app/scripts/RebooEditor/Toolbar/styles.scss
@@ -1,6 +1,6 @@
 .reboo-editor {
   .toolbar {
-    z-index: 10000;
+    z-index: 4;
     position: absolute;
     top: 0;
     left: 80px;
