--- a/app/scripts/RebooEditor/styles.scss
+++ b/app/scripts/RebooEditor/styles.scss
@@ -1,7 +1,7 @@
 .reboo-editor {
   .editor {
     position: relative;
-    z-index: 9999;
+    z-index: 2;
   }
 
   .toolbar-container {
@@ -16,6 +16,6 @@
     left: 0;
     bottom: 0;
     right: 0;
-    z-index: 9998;
+    z-index: 1;
   }
 }
